# nakama-cpp-light

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
core/common/: BaseClient.cpp  DefaultSession.cpp  StrUtil.cpp  Version.cpp
core/core-rest/: RestClient.cpp  RestClient.h
external_include/: httpClient.h
impl/httpLibHttpClient/: NHttpClientLibHC.cpp
interface/include/nakama-cpp/: config.h
